# esp32temp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flash  flash_c3  flash_wroom32  make_ota_image_c3  make_ota_image_wroom32  makeimage  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: apiserver.rs  config.rs  esphome_api.rs  form.js  index.css  lib.rs  measure.rs  mqtt.rs  rmt_ow.rs  state.rs  wifi.rs
static/: form.js  index.css
templates/: index.html.ask
