[package]
name = "esp32temp"
version = "1.8.1"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"


[features]
default = ["esp32c3"]
reset_settings = []
esp32s = []
esp32c3 = []


[dependencies]
anyhow = "1"
askama = "0"
axum = { version = "0", features = ["http1", "json", "form"] }
axum-macros = "0"
chrono = "0"
crc = "3"
# critical-section = { version = "1.1", features = ["std"] }
embedded-hal = "1"
embedded-svc = { version = "0", features = ["experimental"] }
esp-idf-hal = "0"
esp-idf-sys = { version = "0", features = ["binstart"] }
esp-idf-svc = { version = "0", features = ["alloc", "experimental"] }
# futures = "0"
# heapless = "0"
# mio = { version = "0", features = ["log"] }
# panic-halt = "0"
humantime = "2"
postcard = { version = "1", features = ["alloc", "use-crc"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
# tower-http = { version = "0" }
tracing = "0"
# tracing-subscriber = { version = "0", features = ["env-filter"] }

# these had to be fixed, negative temperatures were broken
# also, migrated to embedded-hal 1.0
ds18b20 = { git = "https://github.com/sjm42/ds18b20" }
one-wire-bus = { git = "https://github.com/sjm42/one-wire-bus" }


[build-dependencies]
build-data = "0"
cc = "=1.1.30"
embuild = "0"
anyhow = "1"


[profile.release]
debug = false
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true


[profile.dev]
debug = true
opt-level = 2
lto = "off"
