[package]
name = "esp32temp"
version = "1.9.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"


[features]
default = ["esp32-c3"]
reset_settings = []
esp32-c3 = []
esp-wroom-32 = []


[dependencies]
anyhow = "1.0"
askama = "0.15"
axum = { version = "0.8", features = ["http1", "json", "form"] }
axum-macros = "0.5"
chrono = "0.4"
crc = "3.4"
embedded-hal = "1.0"
embedded-svc = { version = "0.28", features = ["experimental"] }
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-svc = { version = "0.51", features = ["alloc", "experimental"] }
humantime = "2.3"
postcard = { version = "1.1", features = ["alloc", "use-crc"] }
serde = "1.0"
tokio = { version = "1.49", features = ["rt", "net", "io-util"] }
tracing = "0.1"

# these had to be fixed, negative temperatures were broken
# also, migrated to embedded-hal 1.0
ds18b20 = { git = "https://github.com/sjm42/ds18b20" }
one-wire-bus = { git = "https://github.com/sjm42/one-wire-bus" }


[build-dependencies]
build-data = "0.3"
# cc = "=1.1.30"
embuild = "0.33"
anyhow = "1.0"


[profile.release]
debug = false
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true


[profile.dev]
debug = true
opt-level = 2
lto = "off"
