[package]
name = "esp32temp"
version = "2.1.2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"


[features]
default = ["esp32-c3"]
reset_settings = []
esp32-c3 = []
esp-wroom-32 = []


[dependencies]
anyhow = "1.0"
askama = "0.15"
axum = { version = "0.8", features = ["http1", "json", "form"] }
axum-macros = "0.5"
chrono = "0.4"
crc = "3.4"
embedded-svc = { version = "0.29", features = ["experimental"] }
esp-idf-hal = "0.46"
esp-idf-sys = { version = "0.37", features = ["binstart"] }
esp-idf-svc = { version = "0.52", features = ["alloc", "experimental"] }
humantime = "2.3"
postcard = { version = "1.1", features = ["alloc", "use-crc"] }
serde = "1.0"
tokio = { version = "1.52", features = ["rt", "net", "io-util"] }
tracing = "0.1"


[build-dependencies]
build-data = "0.3"
embuild = "0.33"
anyhow = "1.0"
flate2 = "1.1"

# RMT-backed official ESP-IDF 1-Wire component used via esp-idf-hal::onewire
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "onewire_bus", version = "^1.0.4" }


[profile.release]
debug = false
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true


[profile.dev]
debug = true
opt-level = 2
lto = "off"
